--- a/public/css/app.css
+++ b/public/css/app.css
@@ -215,7 +215,7 @@ header .icons #menu-bars {
 
 .home .home-slider .slide .content span {
     color: black;
-    font-size: 1.2rem;
+    font-size: 5.5rem;
 }
 
 .home .home-slider .slide .content h3 {
@@ -266,17 +266,7 @@ header .icons #menu-bars {
     height: 900px;
 }
 
-@media screen and (max-width: 860px) {
-    .we-are-block {
-        height: 2200px;
-    }
-}
 
-@media screen and (max-width: 500px) {
-    .we-are-block {
-        height: 2300px;
-    }
-}
 
 #about-us-section {
     background: #ec4c5a;
@@ -290,12 +280,6 @@ header .icons #menu-bars {
     position: relative;
 }
 
-@media screen and (max-width: 860px) {
-    #about-us-section {
-        flex-direction: column;
-        justify-content: space-between;
-    }
-}
 
 .about-us-image {
     position: absolute;
@@ -304,28 +288,6 @@ header .icons #menu-bars {
     height: 100%;
     overflow: hidden;
 }
-
-@media screen and (max-width: 860px) {
-    .about-us-image {
-        position: relative;
-        width: 100%;
-        height: 45%;
-    }
-}
-
-@media screen and (max-width: 747px) {
-    .about-us-image {
-        height: 35%;
-    }
-}
-
-@media screen and (max-width: 644px) {
-    .about-us-image img {
-        position: absolute;
-        left: -220px;
-    }
-}
-
 .about-us-info {
     display: flex;
     flex-direction: column;
@@ -337,75 +299,16 @@ header .icons #menu-bars {
     margin-left: 12px;
     z-index: 2;
 }
-
-@media screen and (max-width: 1353px) {
-    .about-us-info {
-        margin-right: 400px;
-        width: 60%;
-        background: #ec4c5a;
-        padding: 0px 25px 0px 0px;
-    }
-}
-
-@media screen and (max-width: 1238px) {
-    .about-us-info {
-        margin-right: 340px;
-        width: 100%;
-    }
-}
-
-@media screen and (max-width: 1111px) {
-    .about-us-info {
-        margin-right: 270px;
-    }
-}
-
-@media screen and (max-width: 910px) {
-    .about-us-info {
-        margin-right: 150px;
-    }
-}
-
-@media screen and (max-width: 860px) {
-    .about-us-info {
-        margin: 0px 0px 0px 0px !important;
-        padding: 0px 20px 0px 20px !important;
-        width: 100%;
-        height: 55%;
-        align-items: center;
-    }
-}
-
-@media screen and (max-width: 747px) {
-    .about-us-info {
-        height: 65%;
-    }
-}
-
 .about-us-info h2 {
     color: white;
     font-size: 40pt;
     text-align: right;
 }
-
-@media screen and (max-width: 860px) {
-    .about-us-info h2 {
-        text-align: center;
-    }
-}
-
 .about-us-info p {
     color: white;
     font-size: 14pt;
     text-align: right;
 }
-
-@media screen and (max-width: 860px) {
-    .about-us-info p {
-        text-align: center;
-    }
-}
-
 .about-us-info a {
     background-color: white;
     color: #ec4c5a;
@@ -433,14 +336,6 @@ header .icons #menu-bars {
     justify-content: center;
     position: relative;
 }
-
-@media screen and (max-width: 860px) {
-    #history-section {
-        flex-direction: column;
-        justify-content: space-between;
-    }
-}
-
 .history-image {
     position: absolute;
     top: 0;
@@ -449,28 +344,6 @@ header .icons #menu-bars {
     height: 100%;
     overflow: hidden;
 }
-
-@media screen and (max-width: 860px) {
-    .history-image {
-        position: relative;
-        width: 100%;
-        height: 40%;
-    }
-}
-
-@media screen and (max-width: 747px) {
-    .history-image {
-        height: 35%;
-    }
-}
-
-@media screen and (max-width: 644px) {
-    .history-image img {
-        position: absolute;
-        right: -220px;
-    }
-}
-
 .history-info {
     display: flex;
     flex-direction: column;
@@ -482,75 +355,16 @@ header .icons #menu-bars {
     margin-right: 12px;
     z-index: 2;
 }
-
-@media screen and (max-width: 1353px) {
-    .history-info {
-        margin-left: 400px;
-        width: 60%;
-        background: #ffffff99;
-        padding: 0px 0px 0px 25px;
-    }
-}
-
-@media screen and (max-width: 1238px) {
-    .history-info {
-        margin-left: 340px;
-        width: 100%;
-    }
-}
-
-@media screen and (max-width: 1111px) {
-    .history-info {
-        margin-left: 270px;
-    }
-}
-
-@media screen and (max-width: 910px) {
-    .history-info {
-        margin-left: 150px;
-    }
-}
-
-@media screen and (max-width: 860px) {
-    .history-info {
-        margin: 0px 0px 0px 0px !important;
-        padding: 0px 40px 0px 40px !important;
-        width: 100%;
-        height: 60%;
-        align-items: center;
-    }
-}
-
-@media screen and (max-width: 747px) {
-    .history-info {
-        height: 65%;
-    }
-}
-
 .history-info h2 {
     color: #ec4c5a;
     font-size: 40pt;
     text-align: left;
 }
-
-@media screen and (max-width: 860px) {
-    .history-info h2 {
-        text-align: center;
-    }
-}
-
 .history-info p {
     color: #ec4c5a;
     font-size: 14pt;
     text-align: left;
 }
-
-@media screen and (max-width: 860px) {
-    .history-info p {
-        text-align: center;
-    }
-}
-
 .history-info a {
     background-color: #f86374;
     color: white;
@@ -569,27 +383,7 @@ header .icons #menu-bars {
 }
 
 
-
-@media only screen and (max-width: 500px) {
-    .masthead {
-        padding: 3em 0;
-        font-size: 10em;
-        opacity: 1;
-    }
-    .masthead-heading {
-        font-size: 5em;
-        opacity: 1;
-    }
-    .content-footer {
-        padding: 2em 2.5em;
-        font-size: 2em;
-        opacity: 1;
-    }
-    section>h1 {
-        font-size: 2.5em;
-    }
-}
-/*indivisaul menu orders*/
+/*---------------------------------indivisaul menu orders------------------------------------------*/
 
 .home {
     background-color: beige;
@@ -606,11 +400,6 @@ header .icons #menu-bars {
     margin-left: auto;
 }
 
-.u-section-1 .u-image-1 {
-    min-height: 600px;
-    background-image: url("images/pexels-pixabay-259239.jpg");
-    background-position: 50% 50%;
-}
 
 .u-section-1 .u-container-layout-1 {
     padding: 30px;
@@ -838,10 +627,11 @@ header .icons .dropdown .cart-count {
 /* .boo {
     justify-content: center;
     margin-left: 400px;
+    }
 } */
 
 
-}
+
 .section .section-center {
     -webkit-transform: translateY(-0%);
     transform: translateY(-0%);
@@ -959,12 +749,21 @@ header .icons .dropdown .cart-count {
 .footer {
     padding: 40px 0;
     background-color: #e15666;
+    display: flex;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: inherit;
+
+
 }
 
 .footer .social {
     text-align: center;
     padding-bottom: 25px;
     color: #4b4c4d;
+    position: inherit;
+
 }
 
 .footer .social a {
@@ -975,6 +774,7 @@ header .icons .dropdown .cart-count {
     height: 40px;
     line-height: 38px;
     display: inline-block;
+
     text-align: center;
     border-radius: 50%;
     margin: 0 8px;
@@ -1201,4 +1001,220 @@ div.box label span {
 .box input:hover, .box #month:hover, .box #year:hover {
     background: #ec4c5a;
     color: #ffffff;
+}
+
+
+/*media query for about*/
+
+
+@media screen and (max-width: 1353px) {
+    .history-info {
+        margin-left: 400px;
+        width: 60%;
+        background: #ffffff99;
+        padding: 0px 0px 0px 25px;
+    }
+}
+
+@media screen and (max-width: 1238px) {
+    .history-info {
+        margin-left: 340px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1111px) {
+    .history-info {
+        margin-left: 270px;
+    }
+}
+
+@media screen and (max-width: 910px) {
+    .history-info {
+        margin-left: 150px;
+    }
+}
+
+@media screen and (max-width: 860px) {
+    .history-info {
+        margin: 0px 0px 0px 0px !important;
+        padding: 0px 40px 0px 40px !important;
+        width: 100%;
+        height: 60%;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 747px) {
+    .history-info {
+        height: 65%;
+    }
+}
+
+@media screen and (max-width: 860px) {
+    .history-info h2 {
+        text-align: center;
+    }
+}
+
+
+
+@media screen and (max-width: 860px) {
+    .history-info p {
+        text-align: center;
+    }
+}
+
+
+
+@media only screen and (max-width: 500px) {
+    .masthead {
+        padding: 3em 0;
+        font-size: 10em;
+        opacity: 1;
+    }
+    .masthead-heading {
+        font-size: 5em;
+        opacity: 1;
+    }
+    .content-footer {
+        padding: 2em 2.5em;
+        font-size: 2em;
+        opacity: 1;
+    }
+    section>h1 {
+        font-size: 2.5em;
+    }
+}
+
+
+
+
+@media screen and (max-width: 860px) {
+    .history-image {
+        position: relative;
+        width: 100%;
+        height: 40%;
+    }
+}
+
+@media screen and (max-width: 747px) {
+    .history-image {
+        height: 35%;
+    }
+}
+
+@media screen and (max-width: 644px) {
+    .history-image img {
+        position: absolute;
+        right: -220px;
+    }
+}
+
+
+@media screen and (max-width: 860px) {
+    #history-section {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+
+@media screen and (max-width: 860px) {
+    .about-us-info p {
+        text-align: center;
+    }
+}
+
+
+@media screen and (max-width: 860px) {
+    .about-us-info h2 {
+        text-align: center;
+    }
+}
+
+
+
+@media screen and (max-width: 860px) {
+    .we-are-block {
+        height: 2200px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .we-are-block {
+        height: 2300px;
+    }
+}
+
+@media screen and (max-width: 860px) {
+    .about-us-image {
+        position: relative;
+        width: 100%;
+        height: 45%;
+    }
+}
+
+@media screen and (max-width: 747px) {
+    .about-us-image {
+        height: 35%;
+    }
+}
+
+@media screen and (max-width: 644px) {
+    .about-us-image img {
+        position: absolute;
+        left: -220px;
+    }
+}
+
+
+@media screen and (max-width: 1353px) {
+    .about-us-info {
+        margin-right: 400px;
+        width: 60%;
+        background: #ec4c5a;
+        padding: 0px 25px 0px 0px;
+    }
+}
+
+@media screen and (max-width: 1238px) {
+    .about-us-info {
+        margin-right: 340px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1111px) {
+    .about-us-info {
+        margin-right: 270px;
+    }
+}
+
+@media screen and (max-width: 910px) {
+    .about-us-info {
+        margin-right: 150px;
+    }
+}
+
+@media screen and (max-width: 860px) {
+    .about-us-info {
+        margin: 0px 0px 0px 0px !important;
+        padding: 0px 20px 0px 20px !important;
+        width: 100%;
+        height: 55%;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 747px) {
+    .about-us-info {
+        height: 65%;
+    }
+}
+
+@media screen and (max-width: 860px) {
+    #about-us-section {
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
