--- a/public/css/app.css
+++ b/public/css/app.css
@@ -568,8 +568,6 @@ header .icons #menu-bars {
     transform: translateY(10px);
 }
 
-
-
 @media only screen and (max-width: 500px) {
     .masthead {
         padding: 3em 0;
@@ -589,6 +587,8 @@ header .icons #menu-bars {
         font-size: 2.5em;
     }
 }
+
+
 /*indivisaul menu orders*/
 
 .home {
@@ -840,8 +840,6 @@ header .icons .dropdown .cart-count {
     margin-left: 400px;
 } */
 
-
-}
 .section .section-center {
     -webkit-transform: translateY(-0%);
     transform: translateY(-0%);
@@ -1098,9 +1096,6 @@ header .icons .dropdown .cart-count {
 
 /*--------------------------------payment-----------------------------------*/
 
-
-
-
 div.box h2 {
     border-bottom: 2px solid dimgray;
     padding-bottom: 2%;
@@ -1109,16 +1104,25 @@ div.box h2 {
     margin-bottom: 2%;
 }
 
+
 /*.box {*/
+
+
 /*    margin: 2% auto;*/
+
+
 /*    align-content: center;*/
+
+
 /*    justify-content: center;*/
+
+
 /*}*/
 
 #container {
     box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.2), 0 5px 19px 0 rgba(0, 0, 0, 0.19);
     width: 500px;
-    height: 350px   ;
+    height: 350px;
     margin: 0 auto;
     background: #f86374;
     padding: 2% 3%;
@@ -1198,7 +1202,9 @@ div.box label span {
     color: #ffffff;
 }
 
-.box input:hover, .box #month:hover, .box #year:hover {
+.box input:hover,
+.box #month:hover,
+.box #year:hover {
     background: #ec4c5a;
     color: #ffffff;
 }
