--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,7 +21,7 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 72.5%;
     overflow-x: hidden;
     scroll-padding-top: 5.5rem;
     scroll-behavior: smooth;
@@ -625,6 +625,10 @@ header .icons .dropdown .cart-count {
     top: 7px;
 }
 
+.checkout .a {
+    background: var(--primary);
+}
+
 
 /*---------------------------------------------------Booking Page css---------------------------------------------------------------------------------*/
 
@@ -718,7 +722,8 @@ header .icons .dropdown .cart-count {
     gap: 1.5rem;
 }
 
-.custom-select {
+
+/* .custom-select {
     background-color: rgba(105, 49, 49, 0.7);
     height: 60px;
     padding: 0px 25px;
@@ -729,7 +734,7 @@ header .icons .dropdown .cart-count {
     box-shadow: 0px 0px 0px 2px transparent;
     -webkit-transition: 0.2s;
     transition: 0.2s;
-}
+} */
 
 
 /* media queries */
@@ -896,13 +901,18 @@ header .icons .dropdown .cart-count {
 
 
 /*--------------------------------payment-----------------------------------*/
+
 .text-small {
     font-size: 0.9rem;
 }
+
 .rounded {
     border-radius: 1rem;
 }
+
+
 /*777777777777777777777777777777777777777777777777777777777777777777777777777777777777*/
+
 
 /*media query for about*/
 
