--- a/public/css/app.css
+++ b/public/css/app.css
@@ -640,40 +640,28 @@ header .icons .dropdown .cart-count {
 
 /*---------------------------------------------------Booking Page css---------------------------------------------------------------------------------*/
 
+#booking {
+    font-family: 'Montserrat', sans-serif;
+    background-image: url('../img/background.jpg');
+    background-size: cover;
+    background-position: center;
+}
 
-/* .boo {
-    justify-content: center;
-    margin-left: 400px;
-    }
-} */
-
-.section .section-center {
-    -webkit-transform: translateY(-0%);
-    transform: translateY(-0%);
+#booking::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
 }
 
 .booking-form {
-    position: relative;
-    max-width: 800px;
-    width: 100%;
-    margin: auto;
-    padding: 200px;
-    overflow: hidden;
-    background-image: linear-gradient(to right, #e15666, #fdc087);
-    background-size: cover;
-    border-radius: 20px;
-}
-
-.booking-form .form-header {
-    text-align: center;
-    position: relative;
-    margin-bottom: 30px;
-}
-
-.booking-form .form-header h1 {
-    font-weight: 700;
-    text-transform: capitalize;
-    font-size: 42px;
+    background: linear-gradient(to right, #e15666, #fdc087);
+    padding: 50px 20px;
+    -webkit-box-shadow: 0px 5px 20px -5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 5px 20px -5px rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
 }
 
 .booking-form .form-group {
@@ -682,70 +670,99 @@ header .icons .dropdown .cart-count {
 }
 
 .booking-form .form-control {
-    background-color: rgba(255, 255, 255, 0.2);
-    height: 60px;
-    padding: 0px 25px;
+    background-color: #ebecee;
+    border-radius: 4px;
     border: none;
-    border-radius: 40px;
-    color: #000000;
-    -webkit-box-shadow: 0px 0px 0px 2px transparent;
-    box-shadow: 0px 0px 0px 2px transparent;
-    -webkit-transition: 0.2s;
-    transition: 0.2s;
+    height: 40px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    color: #3e485c;
+    font-size: 14px;
+}
+
+.booking-form .form-control::-webkit-input-placeholder {
+    color: rgba(62, 72, 92, 0.3);
+}
+
+.booking-form .form-control:-ms-input-placeholder {
+    color: rgba(62, 72, 92, 0.3);
+}
+
+.booking-form .form-control::placeholder {
+    color: rgba(62, 72, 92, 0.3);
+}
+
+.booking-form input[type="date"].form-control:invalid {
+    color: rgba(62, 72, 92, 0.3);
+}
+
+.booking-form select.form-control {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.booking-form select.form-control+.select-arrow {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    width: 32px;
+    line-height: 32px;
+    height: 32px;
+    text-align: center;
+    pointer-events: none;
+    color: rgba(62, 72, 92, 0.3);
+    font-size: 14px;
+}
+
+.booking-form select.form-control+.select-arrow:after {
+    content: '\279C';
+    display: block;
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
 }
 
 .booking-form .form-label {
-    color: #6408e3;
-    font-size: 16px;
+    display: inline-block;
+    color: #3e485c;
     font-weight: 700;
+    margin-bottom: 6px;
+    margin-left: 7px;
 }
 
 .booking-form .submit-btn {
+    display: inline-block;
     color: #fff;
-    background-color: #ee3361;
+    background-color: #1e62d8;
     font-weight: 700;
-    height: 60px;
-    padding: 10px 30px;
-    width: 100%;
-    border-radius: 40px;
+    padding: 14px 30px;
+    border-radius: 4px;
     border: none;
-    text-transform: uppercase;
-    font-size: 20px;
-    letter-spacing: 1.3px;
     -webkit-transition: 0.2s all;
     transition: 0.2s all;
 }
 
 .booking-form .submit-btn:hover,
 .booking-form .submit-btn:focus {
-    opacity: 0.2;
+    opacity: 0.9;
 }
 
-
-/*-------------------------------------------test order css-----------------------------------------------*/
-
-.menu .box-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap: 1.5rem;
+.booking-cta {
+    margin-top: 80px;
+    margin-bottom: 30px;
 }
 
+.booking-cta h1 {
+    font-size: 52px;
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: 700;
+}
 
-/* .custom-select {
-    background-color: rgba(105, 49, 49, 0.7);
-    height: 60px;
-    padding: 0px 25px;
-    border: none;
-    border-radius: 40px;
-    color: #ffffff;
-    -webkit-box-shadow: 0px 0px 0px 2px transparent;
-    box-shadow: 0px 0px 0px 2px transparent;
-    -webkit-transition: 0.2s;
-    transition: 0.2s;
-} */
-
-
-/* media queries */
+.booking-cta p {
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.8);
+}
 
 
 /*---------------------------------CSS FOr Welcome page--------- food order------------------------------------*/
